# graphmind

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.example.env  docker-compose.yml
docs/: MEMORY.md  README.md  TOOLS.md
kodik-plugin/: README.md
kodik-plugin/.kodik-plugin/: .mcp.json  plugin.json
kodik-plugin/agents/: memory-curator.md
kodik-plugin/hooks/: graphmind-constants.mjs  hooks.json
kodik-plugin/rules/: graphmind-memory.md
kodik-plugin/skills/graphmind-memory/: SKILL.md
kodik-plugin/skills/graphmind-planning/: SKILL.md
proto/: memory.proto
src/: lib.rs  main.rs
src/actors/: causal_engine.rs  chain.rs  config.rs  consolidate.rs  coordinator.rs  curiosity_engine.rs  embedding.rs  gkl.rs  inference_actor.rs  l0.rs  l1.rs  l2.rs  llm_client.rs  mod.rs  orchestrator.rs  plan_actor.rs  s0.rs  search.rs  trust_firewall.rs  workspace_manager.rs
src/graph/: edge.rs  mod.rs  node.rs
src/grpc/: handlers.rs  mod.rs  server.rs
src/mcp_server/: handler.rs  http_server.rs  mod.rs  net_guard.rs  protocol.rs  server.rs  tools.rs
src/persistence/: file_backend.rs  mod.rs  rocksdb.rs
src/queue/: mod.rs  pending_store.rs  processor.rs
src/web/: mod.rs  settings.rs  ws.rs
src/web/static/: index.html
templates/cursor-automation/: README.md  hooks.json
templates/cursor-automation/hooks/: .gitignore  graphmind-post-tool-use.mjs  graphmind-session-start.mjs  graphmind-session-stop.mjs
templates/cursor-automation/rules/: graphmind-memory.mdc
tests/: bug_001_regression_test.rs  bug_004_009_regression_test.rs  causal_integration_test.rs  l2_integration_test.rs  queue_test.rs  s0_integration_test.rs
